--- a/SweetsStyling.css
+++ b/SweetsStyling.css
@@ -1,30 +1,23 @@
-html{
-    background: #D3D3D9;
+body{
+    background: #C83139;
 }
 
-body{
+
+.container {
     display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content: center;
-    height: 100%;
-    width: 100%;
-    margin: 0;}
+    align-items: center;
+    margin: 100px;
+    gap: 15px;
 
-input, button{
-    background: #04AA6D;
-    color: white;
-    width: 150px;
-    height: 40px;
-    padding: 5px;
-    font-size: 10px;
-    font-family: verdana, serif;}
-
-input:focus button:hover{
-    opacity: 75%;
 }
+.container-box{
+    background: rgba(35, 5, 50, 0.75);
+    border-radius: 8px;
+    padding: 20px;
+    border: 1px solid snow;
+    flex-direction: column;
 
-form{
-    border: 8px solid #04AA6D;
-    border-radius: 6px;
+
 }
